unpackaged/main/default/objects/Unit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Units (Account)</relationshipLabel>
    <relationshipName>Units1</relationshipName>
    <type>Lookup</type>
</CustomField>