unpackaged/main/default/objects/Unit__c/fields/AccountIDx18__c.field-meta.xml
<CustomField>
    <fullName>AccountIDx18__c</fullName>
    <formula>Account__r.AccountId_x18__c</formula>
    <label>AccountIDx18</label>
    <type>Text</type>
</CustomField>