unpackaged/main/default/objects/Unit__c/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <label>Asset Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>