unpackaged/main/default/objects/Unit__c/fields/Associated_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Associated_Manufacturer__c</fullName>
    <label>Associated Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAX Technologies</fullName>
            </value>
            <value>
                <fullName>Worldine</fullName>
            </value>
            <value>
                <fullName>Verifone</fullName>
                <label>VERIFONE</label>
            </value>
            <value>
                <fullName>Ingenico</fullName>
                <label>INGENICO</label>
            </value>
            <value>
                <fullName>Secure Retail</fullName>
            </value>
            <value>
                <fullName>Planet POS</fullName>
            </value>
            <value>
                <fullName>3C Payment UK LTD</fullName>
            </value>
            <value>
                <fullName>3C Payment Luxembourg SA</fullName>
            </value>
            <value>
                <fullName>3C Payment USA Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>