unpackaged/main/default/objects/Unit__c/fields/Bound__c.field-meta.xml
<CustomField>
    <fullName>Bound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bound</label>
    <type>Checkbox</type>
</CustomField>