unpackaged/main/default/objects/Unit__c/fields/Delivery_Location_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location_Recipient__c</fullName>
    <description>Mark C Request - Saurabh 10/03/2022
https://planet.atlassian.net/browse/FSD-140015</description>
    <label>Delivery Location / Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>