unpackaged/main/default/objects/Unit__c/fields/Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Version__c</fullName>
    <label>Firmware Version</label>
    <length>16</length>
    <type>Text</type>
</CustomField>