unpackaged/main/default/objects/Unit__c/fields/Head_Office__c.field-meta.xml
<CustomField>
    <fullName>Head_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to link Stock Units to a specific head office.  When completed this means this Stock Unit is reserved for this head office only.  Remove the field value if assigned to a POS Solution and/or if no longer Stock.</inlineHelpText>
    <label>Head Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Head Office, IKA Head Office, NKA Head Office, IKA In-Fill Head Office, NKA In-Fill Head Office</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stock Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>