unpackaged/main/default/objects/Unit__c/fields/Head_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_ID__c</fullName>
    <formula>Head_Office__r.Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head Office ID</label>
    <type>Text</type>
</CustomField>