unpackaged/main/default/objects/Unit__c/fields/HW_Version__c.field-meta.xml
<CustomField>
    <fullName>HW_Version__c</fullName>
    <label>HW Version</label>
    <length>16</length>
    <type>Text</type>
</CustomField>