unpackaged/main/default/objects/Unit__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <defaultValue>&#39;In Transit to Planet&#39;</defaultValue>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EIT UK</fullName>
            </value>
            <value>
                <fullName>Planet Luxembourg</fullName>
            </value>
            <value>
                <fullName>In Store</fullName>
            </value>
            <value>
                <fullName>Planet Redhill</fullName>
            </value>
            <value>
                <fullName>Planet Twickenham</fullName>
            </value>
            <value>
                <fullName>Worldline</fullName>
            </value>
            <value>
                <fullName>Repair – PAX</fullName>
            </value>
            <value>
                <fullName>Repair – Ingenico</fullName>
            </value>
            <value>
                <fullName>Repair – Worldline</fullName>
            </value>
            <value>
                <fullName>In Transit to Planet</fullName>
                <default>true</default>
                <label>In Transit to Planet</label>
            </value>
            <value>
                <fullName>In Transit to Store</fullName>
            </value>
            <value>
                <fullName>Celestra UK</fullName>
            </value>
            <value>
                <fullName>Celestra Germany</fullName>
            </value>
            <value>
                <fullName>Barron McCann UK</fullName>
            </value>
            <value>
                <fullName>Barron McCann Germany</fullName>
            </value>
            <value>
                <fullName>In Transit To Repair</fullName>
            </value>
            <value>
                <fullName>Whitbread Lab</fullName>
            </value>
            <value>
                <fullName>Planet Chicago</fullName>
            </value>
            <value>
                <fullName>CDE US</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>