unpackaged/main/default/objects/Unit__c/fields/MAC_Address__c.field-meta.xml
<CustomField>
    <fullName>MAC_Address__c</fullName>
    <label>MAC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>