unpackaged/main/default/objects/Unit__c/fields/MAC_address_Bluetooth_network__c.field-meta.xml
<CustomField>
    <fullName>MAC_address_Bluetooth_network__c</fullName>
    <label>MAC address – Bluetooth network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>