unpackaged/main/default/objects/Unit__c/fields/MAC_address_Ethernet_network_card__c.field-meta.xml
<CustomField>
    <fullName>MAC_address_Ethernet_network_card__c</fullName>
    <label>MAC address – Ethernet network card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>