unpackaged/main/default/objects/Unit__c/fields/MAC_address_Wi_Fi_network__c.field-meta.xml
<CustomField>
    <fullName>MAC_address_Wi_Fi_network__c</fullName>
    <label>MAC address – Wi-Fi network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>