unpackaged/main/default/objects/Unit__c/fields/Manufacturer_TID__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_TID__c</fullName>
    <description>Supplied by Vendor/Supplier.</description>
    <label>Manufacturer TID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>