unpackaged/main/default/objects/Unit__c/fields/Memory_mb__c.field-meta.xml
<CustomField>
    <fullName>Memory_mb__c</fullName>
    <inlineHelpText>Required for the VX510 terminals.  3Mb is Low and 6Mb is High.</inlineHelpText>
    <label>Memory (mb)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Unit_Subtype__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1GB</fullName>
            </value>
            <value>
                <fullName>2GB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>