unpackaged/main/default/objects/Unit__c/fields/OB_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>OB_Ticket_Number__c</fullName>
    <label>OB Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>