unpackaged/main/default/objects/Unit__c/fields/P2PE__c.field-meta.xml
<CustomField>
    <fullName>P2PE__c</fullName>
    <label>P2PE Capable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Refurbished</fullName>
                <isActive>false</isActive>
                <label>Refurbished</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>