unpackaged/main/default/objects/Unit__c/fields/PCI_PTS_Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>PCI_PTS_Approval_Number__c</fullName>
    <label>PCI PTS Approval Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>