unpackaged/main/default/objects/Unit__c/fields/PCI_PTS_POI_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>PCI_PTS_POI_Product_Type__c</fullName>
    <label>PCI PTS POI Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OEM PED</fullName>
            </value>
            <value>
                <fullName>OEM SCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>