unpackaged/main/default/objects/Unit__c/fields/PCI_Version__c.field-meta.xml
<CustomField>
    <fullName>PCI_Version__c</fullName>
    <defaultValue>&quot;PCI 4&quot;</defaultValue>
    <label>PCI Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCI 3</fullName>
            </value>
            <value>
                <fullName>PCI 4</fullName>
                <default>true</default>
                <label>PCI 4</label>
            </value>
            <value>
                <fullName>PCI 5</fullName>
            </value>
            <value>
                <fullName>Redsys PCI 3</fullName>
            </value>
            <value>
                <fullName>Redsys PCI 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>