unpackaged/main/default/objects/Unit__c/fields/Planet_Staff__c.field-meta.xml
<CustomField>
    <fullName>Planet_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Must be a licensed Salesforce user</inlineHelpText>
    <label>Planet Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>