unpackaged/main/default/objects/Unit__c/fields/POS_Solution__c.field-meta.xml
<CustomField>
    <fullName>POS_Solution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>POS Solution</label>
    <referenceTo>POS_Solution__c</referenceTo>
    <relationshipLabel>Passport Scanner &amp; Printer Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>