unpackaged/main/default/objects/Unit__c/fields/PTID__c.field-meta.xml
<CustomField>
    <fullName>PTID__c</fullName>
    <label>PTID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>