unpackaged/main/default/objects/Unit__c/fields/Purchase_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_No__c</fullName>
    <label>Purchase Order No</label>
    <length>16</length>
    <type>Text</type>
</CustomField>