unpackaged/main/default/objects/Unit__c/fields/Refurbished__c.field-meta.xml
<CustomField>
    <fullName>Refurbished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Refurbished after first implement and returned.</description>
    <inlineHelpText>Refurbished after first implement and returned.</inlineHelpText>
    <label>Refurbished</label>
    <type>Checkbox</type>
</CustomField>