unpackaged/main/default/objects/Unit__c/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <description>/lightning/r/Unit__c/a047a00000Ag7eaAAB/view</description>
    <formula>HYPERLINK(&quot;/lightning/r/&quot;&amp; CASESAFEID(Id) &amp;&quot;/view&quot; ,  Serial_Number__c  , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial No</label>
    <type>Text</type>
</CustomField>