unpackaged/main/default/objects/Unit__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Merchant Owner</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Owning_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access-Is</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Consorzio Triveneto</fullName>
            </value>
            <value>
                <fullName>Desko</fullName>
            </value>
            <value>
                <fullName>Epson</fullName>
            </value>
            <value>
                <fullName>Fintrax</fullName>
            </value>
            <value>
                <fullName>ITS</fullName>
            </value>
            <value>
                <fullName>PAX</fullName>
            </value>
            <value>
                <fullName>Point</fullName>
            </value>
            <value>
                <fullName>Sage Pay</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Secure Retail</fullName>
            </value>
            <value>
                <fullName>Setefi</fullName>
            </value>
            <value>
                <fullName>Thales/Hypercom</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Verifone</fullName>
            </value>
            <value>
                <fullName>Wacom</fullName>
            </value>
            <value>
                <fullName>Whitbread</fullName>
            </value>
            <value>
                <fullName>Europcar</fullName>
            </value>
            <value>
                <fullName>Kering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>