unpackaged/main/default/objects/Unit__c/fields/Tamper_Proof_Bag_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Tamper_Proof_Bag_Serial_Number__c</fullName>
    <label>Tamper Proof Bag Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>