unpackaged/main/default/objects/Unit__c/fields/UAT_Terminal__c.field-meta.xml
<CustomField>
    <fullName>UAT_Terminal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UAT Terminal</label>
    <type>Checkbox</type>
</CustomField>