unpackaged/main/default/objects/Unit__c/fields/Unique_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_External_ID__c</fullName>
    <label>Unique External ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>