unpackaged/main/default/objects/Unit__c/fields/Unit_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_Type__c</fullName>
    <label>Unit Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>No Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>