unpackaged/main/default/objects/Unit__c/fields/Unit_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Unit_Subtype__c</fullName>
    <label>Unit Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Unit_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A920 Charging Cradle</fullName>
            </value>
            <value>
                <fullName>Brother HL-L2365dw Laser Printers</fullName>
            </value>
            <value>
                <fullName>Datalogic Magellan 110i (2D) Barcode scanner</fullName>
            </value>
            <value>
                <fullName>Dell E1715S 17&quot; monitor</fullName>
            </value>
            <value>
                <fullName>Desk5000</fullName>
            </value>
            <value>
                <fullName>E355</fullName>
            </value>
            <value>
                <fullName>E355 Charging Cradle</fullName>
            </value>
            <value>
                <fullName>EPSON TM-m30 Thermal</fullName>
            </value>
            <value>
                <fullName>Epson TM T20 III Thermal</fullName>
            </value>
            <value>
                <fullName>Epson TM T20 II Thermal</fullName>
            </value>
            <value>
                <fullName>Epson TM T20 I Thermal</fullName>
            </value>
            <value>
                <fullName>Epson TM T88IV Thermal</fullName>
            </value>
            <value>
                <fullName>Epson TM T88V Thermal</fullName>
            </value>
            <value>
                <fullName>Epson TM U295 Impact</fullName>
            </value>
            <value>
                <fullName>H500</fullName>
            </value>
            <value>
                <fullName>i5100</fullName>
            </value>
            <value>
                <fullName>i7780</fullName>
            </value>
            <value>
                <fullName>INGENICO Lane 3000</fullName>
            </value>
            <value>
                <fullName>iPad Mini 4 A1550</fullName>
            </value>
            <value>
                <fullName>M010</fullName>
            </value>
            <value>
                <fullName>Move 2500</fullName>
            </value>
            <value>
                <fullName>MOVE5000</fullName>
            </value>
            <value>
                <fullName>P400</fullName>
            </value>
            <value>
                <fullName>P400+</fullName>
            </value>
            <value>
                <fullName>P400 with Security Pole</fullName>
            </value>
            <value>
                <fullName>Pax A35</fullName>
            </value>
            <value>
                <fullName>Pax A77</fullName>
            </value>
            <value>
                <fullName>Pax A77 Charging Cradle</fullName>
            </value>
            <value>
                <fullName>Pax A80</fullName>
            </value>
            <value>
                <fullName>PAX A920 - Black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>