unpackaged/main/default/objects/Unit__c/fields/Unit_Supported_Comms_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Supported_Comms_Type__c</fullName>
    <label>Unit Supported Comms Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Unit_Subtype__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BT IP</fullName>
            </value>
            <value>
                <fullName>BT IP and BT PSTN</fullName>
            </value>
            <value>
                <fullName>GPRS</fullName>
            </value>
            <value>
                <fullName>IP</fullName>
            </value>
            <value>
                <fullName>PSTN</fullName>
            </value>
            <value>
                <fullName>WIFI</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>3G</fullName>
                <isActive>false</isActive>
                <label>3G</label>
            </value>
            <value>
                <fullName>4G</fullName>
                <isActive>false</isActive>
                <label>4G</label>
            </value>
            <value>
                <fullName>BT</fullName>
                <isActive>false</isActive>
                <label>BT</label>
            </value>
            <value>
                <fullName>ETH</fullName>
                <isActive>false</isActive>
                <label>ETH</label>
            </value>
            <value>
                <fullName>HDMI</fullName>
                <isActive>false</isActive>
                <label>HDMI</label>
            </value>
            <value>
                <fullName>IP and PSTN</fullName>
                <isActive>false</isActive>
                <label>IP and PSTN</label>
            </value>
            <value>
                <fullName>IP and PSTN and GPRS</fullName>
                <isActive>false</isActive>
                <label>IP and PSTN and GPRS</label>
            </value>
            <value>
                <fullName>Serial</fullName>
                <isActive>false</isActive>
                <label>Serial</label>
            </value>
            <value>
                <fullName>USB</fullName>
                <isActive>false</isActive>
                <label>USB</label>
            </value>
            <value>
                <fullName>Wifi and BT PSTN and BT IP</fullName>
                <isActive>false</isActive>
                <label>Wifi and BT PSTN and BT IP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>