unpackaged/main/default/objects/Unit__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hemisphere</fullName>
                <label>HEMISPHERE</label>
            </value>
            <value>
                <fullName>PAX Technologies</fullName>
            </value>
            <value>
                <fullName>Worldine</fullName>
            </value>
            <value>
                <fullName>Verifone</fullName>
            </value>
            <value>
                <fullName>Ingenico</fullName>
            </value>
            <value>
                <fullName>Secure Retail</fullName>
                <label>SECURE RETAIL</label>
            </value>
            <value>
                <fullName>Planet POS</fullName>
            </value>
            <value>
                <fullName>3C Payment UK LTD</fullName>
            </value>
            <value>
                <fullName>3C Payment Luxembourg SA</fullName>
            </value>
            <value>
                <fullName>3C Payment USA Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>