unpackaged/main/default/objects/Unit__c/fields/Whitbread_ID__c.field-meta.xml
<CustomField>
    <fullName>Whitbread_ID__c</fullName>
    <label>Whitbread ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>