unpackaged/main/default/objects/Unit__c/validationRules/Asset_Number_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Number_Assigned</fullName>
    <active>false</active>
    <errorConditionFormula>AND(POS_Solution__c &lt;&gt;&quot;&quot;, Asset_Number__c =&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Asset_Number__c</errorDisplayField>
    <errorMessage>An Asset Number must be completed if Unit is assigned to a POS Solution</errorMessage>
</ValidationRule>