unpackaged/main/default/objects/Unit__c/validationRules/Head_Office_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Head_Office_Stock</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Head_Office__c)),  TEXT(Status__c) &lt;&gt; &quot;Stock&quot;)</errorConditionFormula>
    <errorDisplayField>Head_Office__c</errorDisplayField>
    <errorMessage>You may only complete the Head Office field if the Unit Status is Stock.</errorMessage>
</ValidationRule>