unpackaged/main/default/objects/Unit__c/validationRules/PTID_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>PTID_Assigned</fullName>
    <active>false</active>
    <errorConditionFormula>AND(POS_Solution__c &lt;&gt;&quot;&quot;,  PTID__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>PTID__c</errorDisplayField>
    <errorMessage>A PTID must be completed if Unit is assigned to a POS Solution</errorMessage>
</ValidationRule>