unpackaged/main/default/objects/Unit__c/validationRules/Serial_Number_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_Number_Lock</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PRIORVALUE(Serial_Number__c) &lt;&gt;&quot;&quot;,
ISCHANGED(Serial_Number__c))</errorConditionFormula>
    <errorDisplayField>Serial_Number__c</errorDisplayField>
    <errorMessage>You cannot change a Serial Number once assigned.</errorMessage>
</ValidationRule>