unpackaged/main/default/objects/Unit__c/validationRules/Serial_Number_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_Number_Mandatory</fullName>
    <active>true</active>
    <description>A Serial Number is required for Terminals and Pinpads where Unit Cost Type is not Rent.</description>
    <errorConditionFormula>AND(TEXT(Unit_Cost_Type__c) &lt;&gt; &quot;Rent&quot;, Serial_Number__c = &quot;&quot;, OR(TEXT(Unit_Type__c) = &quot;Terminal&quot;, (TEXT(Unit_Type__c) = &quot;Pinpad&quot;)))</errorConditionFormula>
    <errorDisplayField>Serial_Number__c</errorDisplayField>
    <errorMessage>A Serial Number is required for Terminals and Pinpads where Unit Cost Type is not Rent.</errorMessage>
</ValidationRule>