unpackaged/main/default/objects/Unit__c/validationRules/Vx510_Memory.validationRule-meta.xml
<ValidationRule>
    <fullName>Vx510_Memory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Unit_Subtype__c) = &quot;Vx510&quot;,  TEXT(Memory_mb__c) = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Memory_mb__c</errorDisplayField>
    <errorMessage>Please enter whether the Vx510 has High or Low memory.</errorMessage>
</ValidationRule>