unpackaged/main/default/objects/Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unit_Type__c</columns>
    <columns>Unit_Subtype__c</columns>
    <columns>Status__c</columns>
    <columns>POS_Solution__c</columns>
    <columns>PTID__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Unit_Supported_Comms_Type__c</columns>
    <columns>Owning_Country__c</columns>
    <columns>Location__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Customer_Service_ES</role>
        <role>Customer_Service_GB</role>
        <role>Customer_Service_IT</role>
        <role>POS_Support_Management</role>
        <role>Spain_Sales_Support</role>
    </sharedTo>
</ListView>